# a_maze_ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  pyproject.toml
mazegen/: __init__.py  config.py  generator.py  renderer.py  solver.py
