[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A-Maze-ing: hex-encoded maze generator with BFS solver and terminal renderer"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]
